--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: ui
-        image: nginx:latest
+        image: nginx:1.27.2
         ports:
         - containerPort: 80
         env:
@@ -30,4 +30,5 @@ spec:
           valueFrom:
             secretKeyRef:
               name: catalog-db-secret
+
               key: password
